Fix z-index for notifications panel

--- a/src/components/Notification/styles.scss
+++ b/src/components/Notification/styles.scss
@@ -1,5 +1,6 @@
 .notifications {
   position: fixed;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
